﻿$Revision$
	$Author$ $Date$
	
#Revision: 1349 
	formirror Date: 2010-02-10 03:10:19 +0300 (Ср, 10 фев 2010) 
	Реструктуризация
	- Переносим css и палитры в корень.
	- Добавляем аддон для *.reg
	- Все теперь билдится автоматичски