@@ -151,7 +151,7 @@
   </prototype>
   <prototype name="lua" group="main" description="Lua">
     <location link="base/lua.hrc"/>
-    <filename>/\.(lua)$/i</filename>
+    <filename>/\.(w?lua)$/i</filename>
   </prototype>  
   <prototype name="ruby" group="main" description="Ruby">
     <location link="base/ruby.hrc"/>
