@@ -37,5 +37,8 @@
     <hrd class="rgb" name="bred3" description="Bred3 colors">
       <location link="&hrd;/rgb/contrib/bred3.hrd"/>
     </hrd>
-
+    <hrd class="rgb" name="visual" description="Visual by Roman Kuzmin">
+      <location link="&hrd;/rgb/visual-rgb.hrd"/>
+    </hrd>
+	
   </hrd-sets>
