@@ -1,5 +1,9 @@
 ﻿$Revision$
 	$Author$ $Date$
+	Добавлены стили от Roman Kuzmin
+	
+#Revision: 1400
+	Author: formirror Date: 2010-02-19 00:29:03 +0500 (Пт, 19 фев 2010)
 	
 #Revision: 1349 
 	formirror Date: 2010-02-10 03:10:19 +0300 (Ср, 10 фев 2010) 
